--- a/templates/apps/destajos/viviendas/detail.html
+++ b/templates/apps/destajos/viviendas/detail.html
@@ -7,7 +7,7 @@
             <!-- INFO -->
             <div>
                 <h1 class="text-xl font-bold">
-                    Vivienda {{ vivienda.numero }}
+                    VIV-{{ vivienda.numero }}
                 </h1>
 
                 <p class="text-sm text-gray-500">
