--- a/templates/apps/destajos/viviendas/update.html
+++ b/templates/apps/destajos/viviendas/update.html
@@ -4,7 +4,14 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Editar {{ vivienda }}</h1>
+                <h1 class="text-xl font-bold">
+                    VIV-{{ vivienda.numero }}
+                </h1>
+
+                <p class="text-sm text-gray-500">
+                    {{ vivienda.agrupador.obra.nombre }} {{ vivienda.agrupador.obra.etapa }}
+                    · {{ vivienda.agrupador.tipo }} {{ vivienda.agrupador.numero }} · {{ vivienda.estructura }}
+                </p>
             </div>
 
             <!-- MIDDLE -->
