--- a/templates/icons_safelist.html
+++ b/templates/icons_safelist.html
@@ -4,3 +4,4 @@
 <span class="icon-[healthicons--human-resoruces]"></span>
 <span class="icon-[ion--construct]"></span>
 <span class="icon-[iconoir--birthday-cake]"></span>
+<span class="icon-[bitcoin-icons--sign-filled]"></span>
